--- a/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -31,44 +31,44 @@ The output for HLA-DRB3/4/5 will contain DRB1 information for the first row sinc
 Example output of BLAASD() for HLA-A, where the selected row outputs are 2 and 8 to illustrate different HLA-A alleles, and selected columns are the first 19 columns of the dataframe, where the first 4 columns consist of the locus, allele, trimmed_allele of 2 fields, and the full allele name. The rest of the columns consist of corresponding amino acids for each amino acid position for a given allele:
 
 >BLAASD("A")[[1]][c(2,8),1:19]
+
   locus       allele trimmed_allele    allele_name -24 -23 -22 -21 -20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10
 2     A 01:01:01:02N        A*01:01 A*01:01:01:02N   M   A   V   M   A   P   R   T   L   L   L   L   L   S   G
 8     A  01:01:01:08        A*01:01  A*01:01:01:08   M   A   V   M   A   P   R   T   L   L   L   L   L   S   G
 ```
 
 ### findMotif()
-findMotif() parses the provided amino-acid motif, which should be written as `locus*##$~##$~##$`, where ## identifies a peptide position, and $ identifies an amino acid residue. Motifs can include any number of amino acids positions. The following output is an example of the 1st, 5th, 9th, and 10th DRB1 alleles that have the `DRB1*26F~28E~30Y` motif. 
+findMotif() parses the provided amino-acid motif, which should be written as `locus*##$~##$~##$`, where ## identifies a peptide position, and $ identifies an amino acid residue. Motifs can include any number of amino acids positions. The following output is an example of the first three DRB1 alleles that have the `DRB1*26F~28E~30Y` motif. 
 
 ```
->findMotif("DRB1*26F~28E~30Y")[c(1,5,9,10), 1:65]
+>findMotif("DRB1*26F~28E~30Y")[1:3,1:65]
 
-   locus   allele trimmed_allele   allele_name -29 -28 -27 -26 -25 -24 -23 -22 -21 -20 -19 -18 -17
-1   DRB1 01:01:01     DRB1*01:01 DRB1*01:01:01   M   V   C   L   K   L   P   G   G   S   C   M   T
-5   DRB1 01:01:05     DRB1*01:01 DRB1*01:01:05   *   *   *   *   *   *   *   *   *   *   *   *   *
-9   DRB1 01:01:09     DRB1*01:01 DRB1*01:01:09   *   *   *   *   *   *   *   *   *   *   *   *   *
-10  DRB1 01:01:10     DRB1*01:01 DRB1*01:01:10   *   *   *   *   *   *   *   *   *   *   *   *   *
-   -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
-1    A   L   T   V   T   L   M  V  L  S  S  P  L  A  L  A G D T R P R F L W  Q  L  K  F  E  C  H  F
-5    *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
-9    *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
-10   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
-   18 19 20 21 22 23 24 25 26 INDEL-1 27 28 29 30 31
-1   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
-5   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
-9   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
-10  F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
+ locus   allele trimmed_allele   allele_name -29 -28 -27 -26 -25 -24 -23 -22 -21 -20 -19 -18 -17
+204  DRB1 03:02:01     DRB1*03:02 DRB1*03:02:01   M   V   C   L   R   L   P   G   G   S   C   M   A
+205  DRB1 03:02:02     DRB1*03:02 DRB1*03:02:02   *   *   *   *   *   *   *   *   *   *   *   *   *
+206  DRB1 03:02:03     DRB1*03:02 DRB1*03:02:03   *   *   *   *   *   *   *   *   *   *   *   *   *
+    -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
+204   V   L   T   V   T   L   M  V  L  S  S  P  L  A  L  A G D T R P R F L E  Y  S  T  S  E  C  H  F
+205   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * G D T R P R F L E  Y  S  T  S  E  C  H  F
+206   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L E  Y  S  T  S  E  C  H  F
+    18 19 20 21 22 23 24 25 26 INDEL-1 27 28 29 30 31
+204  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
+205  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
+206  F  N  G  T  E  R  V  R  F       .  L  E  R  Y  F
 ```
 
 If a motif is not found, a warning message is output:
 ```
 >findMotif("DRB1*26F~28E~30Z")
 
-DRB1*26F~28E~30Z : No alleles possess this motif
+Warning message:
+In findMotif("DRB1*26F~28E~30Z") :
+  DRB1*26F~28E~30Z: No alleles possess this motif
 ```
 
 If a motif has formatting errors, a warning message is output:
 ```
->findMotif("DRB1**27F)
+>findMotif("DRB1**27F")
 
 Warning message:
 In findMotif("DRB1**27F") :
@@ -78,6 +78,7 @@ In findMotif("DRB1**27F") :
 If a motif contains an amino acid position not present in the 3.39.0 ANHIG/IMGTHLA alignments, a warning message is output:
 ```
 > findMotif("DRB1*27999F")
+
 Warning message:
 In findMotif("DRB1*27999F") :
   One or more of your amino acid positions is not present in the alignment. Please make sure amino acid positions of interest are present in the current release of ANHIG/IMGTHLA alignments.
@@ -118,7 +119,10 @@ knitr::include_graphics("basemap_bw.jpg")
 #if an amino acid motif is not found in the Solberg dataset, a warning is output
 
 >PALM("DRB1*-25R~13S~16H~26Y~47Y~86V")
-DRB1*-25R~13S~16H~26Y~47Y~86V : No alleles possess this motif
+
+Warning message:
+In PALM("DRB1*-25R~13S~16H~26Y~47Y~86V") :
+  DRB1*-25R~13S~16H~26Y~47Y~86V : No alleles possess this motif
 ```
 
 
